# Xtra-Kernel-Manager

./: .gitignore  CHANGELOGS.md  How To Root.md  README.md  build.gradle.kts  build_debug.sh  changelogs.txt  gradle.properties.template  local.properties.template  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: build-and-release.yml  build-debug.yml
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/id/xms/xtrakernelmanager/: MainActivity.kt  XtraKernelApp.kt
app/src/main/java/id/xms/xtrakernelmanager/data/model/: HideAccessibilityMode.kt
app/src/main/java/id/xms/xtrakernelmanager/data/preferences/: PreferencesManager.kt  TomlConfigManager.kt
app/src/main/java/id/xms/xtrakernelmanager/domain/usecase/: CPUControlUseCase.kt  FunctionalRomUseCase.kt
app/src/main/java/id/xms/xtrakernelmanager/service/: GameMonitorService.kt  GameOverlayService.kt
app/src/main/java/id/xms/xtrakernelmanager/ui/components/: DonationDialog.kt  LottieSwitch.kt  ModernBottomBar.kt
app/src/main/java/id/xms/xtrakernelmanager/ui/navigation/: Navigation.kt
app/src/main/java/id/xms/xtrakernelmanager/utils/: DebugLog.kt  RomDetector.kt
app/src/main/java/id/xms/xtrakernelmanager/xposed/: BankingHideModule.kt
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/main/rust/xkm_native/: Cargo.toml
gradle/: libs.versions.toml
(+85 files in other folders)
