[package]
name = "xkm_native"
version = "1.0.0"
edition = "2024"
description = "Native library for Xtra Kernel Manager"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
rustix = { version = "1.1.4", default-features = false, features = ["fs"] }
once_cell = "1.19"
parking_lot = "0.12"

procfs = { version = "0.18", optional = true, default-features = false, features = [
    "serde1",
] }
walkdir = { version = "2.4", optional = true }

[features]
default = []
advanced = ["procfs", "walkdir"]

[profile.release]
opt-level = "z"
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1
overflow-checks = false

[profile.release.package."*"]
opt-level = "z"
strip = "symbols"
